[mod] 20260112 增加es相关知识点